--- a/index.css
+++ b/index.css
@@ -139,3 +139,19 @@ tspan.volume {
   fill: none;
   pointer-events: all;
 }
+
+line.indicator_x {
+  stroke: white;
+  stroke-width: 2;
+}
+
+line.indicator_y {
+  stroke: white;
+  stroke-width: 2;
+}
+
+rect.price_indicator {
+  fill: black;
+  stroke-width:1;
+  stroke: white;
+}
