--- a/index.css
+++ b/index.css
@@ -155,3 +155,13 @@ rect.price_indicator {
   stroke-width:1;
   stroke: white;
 }
+
+svg {
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+}
